--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
         <h1>ORBITCODE 컨텐츠 빌더</h1>
         <div>
             {% if user.is_authenticated %}
-            <form method="post" action="{% url 'accounts:logout' %}">
+            <form method="post" action="{% url 'account:logout' %}">
                 {% csrf_token %}
                 <button type="submit" class="text-red-300 hover:underline">로그아웃</button>
             </form>
