--- a/templates/builder/video/netflix/boxoffice.html
+++ b/templates/builder/video/netflix/boxoffice.html
@@ -42,6 +42,12 @@
     </div>
 </form>
 
+{% if message %}
+<span class="p-2 m-4 rounded-xl bg-red-500 text-white">
+    {{ message }}
+</span>
+{% endif %}
+
 <form name="frmSave" method="post" action={% url "builder-video:netflix-boxoffice" %}>
     {% csrf_token %}
     <input type="hidden" name="content_ids" value="{{ content_ids }}" />
@@ -54,7 +60,7 @@
             <li class="flex items-center py-4 hover:bg-violet-500 hover:text-white">
                 <input type="hidden" name="content_{{ content.platform_id }}" value="{{ content }}" />
                 <span class="font-bold h-20 px-2 py-2">{{ content.rank }}</span>
-                <img src="{{ content.thumbnails.0.thumbnail }}" alt="{{ content.title }}" class="h-24 rounded-xl mr-4" />
+                <img src="{{ content.thumbnail.0.url }}" alt="{{ content.title }}" class="h-24 rounded-xl mr-4" />
                 <div>
                 <h3 class="font-semibold pr-2">
                     {{ content.title }}
@@ -76,7 +82,7 @@
                     {{ content.synopsis}}
                 </div>
                 <p class="text-gray-500">
-                    <a href="{{ content.link }}" target="_blank">보러가기</a>
+                    <a href="{{ content.watch.0.url }}" target="_blank">{{ content.watch.0.url }}</a>
                 </p>
                 </div>
             </li>
@@ -91,7 +97,7 @@
             <li class="flex items-center py-4 hover:bg-violet-500 hover:text-white">
                 <input type="hidden" name="content_{{ content.platform_id }}" value="{{ content }}" />
                 <span class="font-bold h-20 px-2 py-2">{{ content.rank }}</span>
-                <img src="{{ content.thumbnails.0.thumbnail }}" alt="{{ content.title }}" class="h-24 rounded-xl mr-4" />
+                <img src="{{ content.thumbnail.0.url }}" alt="{{ content.title }}" class="h-24 rounded-xl mr-4" />
                 <div>
                 <h3 class="font-semibold pr-2">
                     {{ content.title }}
@@ -113,7 +119,7 @@
                     {{ content.synopsis}}
                 </div>
                 <p class="text-gray-500">
-                    <a href="{{ content.link }}" target="_blank">보러가기</a>
+                    <a href="{{ content.watch.0.url }}" target="_blank">{{ content.watch.0.url }}</a>
                 </p>
                 </div>
             </li>
