--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <aside class="w-48 flex-none bg-white text-indigo-900 rounded-lg shadow ml-4 dark:bg-gray-800">
     <div class="p-4">
         <h1 class="text-slate-500 text-center">
-            관리자 메뉴
+            Build Menu
         </h1>
     </div>
     <nav>
