[fix] Text 및 컨벤션 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,14 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Manager</title>
+    <title>ORBITCODE ContentBuilder</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src={% static "js/base.js" %} defer></script>
-    <link rel="stylesheet" href={% static "css/base.css" %}>
+    <script src="{% static 'js/base.js' %}" defer></script>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <!-- Custom CSS & JavaScript -->
     {% block head %} {% endblock head %}
 </head>
