--- a/templates/builder/video/netflix/boxoffice.html
+++ b/templates/builder/video/netflix/boxoffice.html
@@ -56,7 +56,7 @@
         <div class="px-2 py-2">
             <h2>오늘 대한민국의 TOP 10 시리즈</h2>
             <ul>
-            {% for content in contents.series %}
+            {% for content in contents %}
             <li class="flex items-center py-4 hover:bg-violet-500 hover:text-white">
                 <input type="hidden" name="content_{{ content.platform_id }}" value="{{ content }}" />
                 <span class="font-bold h-20 px-2 py-2">{{ content.rank }}</span>
